# importtime_convert

./: CHANGELOG.md  DEVELOPING.md  README.md  noxfile.py  pyproject.toml  requirements-dev.txt
.github/workflows/: check.yml  deploy.yml
import_time_flame_graph/: _parse.py
src/import_time_flame_graph/: __main__.py  _output_format.py  _parse.py
src/importtime_convert/: __init__.py  __main__.py  _output_format.py  _output_formats.py  _parse.py
tests/: test_output_formats.py  test_parse.py
web/: import_time_flame_graph-0.0.0-py2.py3-none-any.whl  index.html
