[build-system]
requires = ["setuptools >= 61.0"]  # >=61.0 for pyproject.toml support.
build-backend = "setuptools.build_meta"

[project]
name = "import_time_flame_graph"
description = "Make a flame graph from the output of `-X importtime`."
version = "0.0.0"
authors = [{name="Max Marrone", email="max@marrone.nyc"}]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

readme = "README.md"

requires-python = ">=3.9"
dependencies = []

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
python_version = 3.9  # Our lowest supported version.
exclude = "^dist/"

[tool.pytest]
testpaths = ["tests"]
