[build-system]
requires = ["setuptools >= 77.0.3"]  # >=77.0.3 for `license` and `license-files` support.
build-backend = "setuptools.build_meta"

[project]
name = "importtime_convert"
description = "Parse the output of `python -X importtime` and convert it to other formats."
version = "1.1.0"
authors = [{name="Max Marrone", email="max@marrone.nyc"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

readme = "README.md"

license = "MIT"
license-files = ["LICENSE*"]

requires-python = ">=3.10"
dependencies = []

[project.scripts]
importtime-convert = "importtime_convert.__main__:_cli_main"

[project.urls]
Source = "https://github.com/SyntaxColoring/importtime_convert"
Issues = "https://github.com/SyntaxColoring/importtime_convert/issues"
Changelog = "https://github.com/SyntaxColoring/importtime_convert/blob/main/CHANGELOG.md"

[tool.isort]
profile = "black"

[tool.mypy]
files = "src, tests, *.py"
strict = true

[tool.pytest]
testpaths = ["tests"]
